# test-runner

./: Cargo.toml  LICENSE
.github/workflows/: backseating_pipeline.yml  rust.yml
src/: main.rs
tests/: test_namespace_with_multiple_definitions.bs  test_size_of_expressions_and_types.bs  test_type_deduction.bs
tests/arrays/: test_array_of_function_pointers.bs
tests/functions/: test_calling_non_exported_function_from_outside_namespace_fails.bs
tests/pointers/: test_assigning_const_pointer_to_mutable_pointer_fails.bs  test_cannot_subtract_pointer_from_integer.bs  test_dereferencing_bool_pointer.bs  test_pointer_arithmetics.bs  test_pointer_usage.bs
tests/structs/: test_arrays_of_structs.bs  test_pointer_arithmetics_with_arrays_of_structs.bs  test_structs_inside_other_structs.bs
tests/undeclared_types/: test_use_of_undeclared_parameter_type_fails.bs  test_use_of_undeclared_return_type_fails.bs
