[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.8.1"
clap = { version = "3.2.17", features = ["derive"] }
crossterm = "0.25.0"
rayon = "1.5.3"
anyhow = "1.0.66"
